2012-07-21 Felix Natter <fnatter@gmx.net>
	* gtypist.[ch], infoview.c: don't show beginner screen when --expert is given,
	when the user presses 'D'/'d' in beginner screen: write option "expert"
	into config file.

2012-07-08 Felix Natter <fnatter@gmx.net>

	* gtypist.c, utf8.[ch]: Avoid collision between 0x107 unicode char
	  (c with accent) and KEY_BACKSPACE by honoring the return value
	  of get_wch() (Reported by Kalthor <kalthor@interia.pl>)

2012-02-11 Felix Natter <fnatter@gmx.net>
	* infoview.c: reduce flicker by clearing lines incrementally on a
	  scrolling event

2012-02-10 Tim Marston <tim@ed.am>

	* speedbox.c: rewrote code to display end-of-lesson speed and
	  information and pulled it out in to a new file.

2012-02-10 Felix Natter <fnatter@gmx.net>

	* banner.c/h: put banner() in its own file so that it can be used
	  in infoview.c
	* infoview.c: display banner at top, use banner colors for scrollbar

2011-11-05 Felix Natter <fnatter@gmx.net>

	* utf8.c use MultiByteToWideChar() also in utf8len() on minGW
	  (this fixes problems with ru.typ on minGW)

2011-11-04 Felix Natter <fnatter@gmx.net>

	* utf8.c: use MultiByteToWideChar() in widen() on Windows. This will
	  convert to two-byte wchar_t which is what minGW + PDCurses support

2011-10-30 Tim Marston <edam@waxworlds.org>

	* gtypist.c, utf8.c/h, cursmenu.c: get_widech() uses ints to avoid
	  using wint_t, which is broken on Windows. Also, simplified reading
	  characters so that get_widech() is always used. It also now
	  handles windows newline characters for us.

2011-10-26 Felix Natter <fnatter@gmx.net>

	* gtypist.c, utf8.c/h: add get_widech() wrapper which
	  calls getch() or get_wch() depending on whether it's a UTF8
          console or not => fixes input problems with KOI8-R terminals
	* script.c, gtypist.c: try to read (convertFromUTF8()) the whole
	  lesson at the very beginning, in order to terminate at the very